# SpookyGame

./: .gitignore  Cargo.toml  TODO.md  build.bat  build.sh  index.html
assets/2d/: README.md
assets/ldtk/: spooky_game.ldtk
assets/shaders/: lighting.wgsl
delivery/: SpookyGame.d.ts  SpookyGame.js  SpookyGame_bg.wasm.d.ts  index.html
files/: bg_music.vcv  investigator.aseprite  light.aseprite  noise_maker.aseprite  palette.aseprite  player.aseprite  player_placeholder.aseprite  space_bar.aseprite  ui.aseprite
src/: ai.rs  animated_sprite.rs  audio.rs  collider.rs  collisions.rs  config.rs  enemies.rs  environment.rs  game_mode.rs  grid.rs  interactibles.rs  investigators.rs  main.rs  main_menu.rs  pathfinding.rs  player.rs  player_controller.rs  rendering.rs  states.rs  utils.rs  villagers.rs
src/ai/: chase.rs  dead.rs  idle.rs  investigate.rs  mod.rs  run_away.rs  talk_to_investigator.rs  transitions.rs  wander.rs
src/ldtk/: animation.rs  entities.rs  mod.rs
src/ldtk/entities/: collision_tile.rs  dead_player.rs  hidding_spot.rs  interactible.rs  investigator.rs  mod.rs  noise_maker.rs  player.rs  player_respawn_point.rs  villager.rs
src/ldtk/entities/enemies/: investigator.rs  mod.rs  villager.rs
src/menus/: lose_menu.rs  main_menu.rs  mod.rs  pause_menu.rs  ui.rs  win_menu.rs
src/playing/: intro_scene.rs  loading.rs  mod.rs  playing.rs
