[package]
name = "SpookyGame"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
bevy_dev_tools = "0.14.2"
bevy_ecs_ldtk = "0.10.0"
bevy_ecs_tilemap = "0.14.0"
bevy_embedded_assets = "0.11.0"
# bevy-inspector-egui = "0.26.0"
bevy_rand = {version = "0.7.1", features = ["wyrand"]}
bevy_rapier2d = {version="0.27.0", features = ["debug-render-2d"]}
iyes_progress = {version="0.12.0", features = ["assets"]}
pathfinding = "4.11.0"
rand_core = "0.6.4"

# For building web
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
